Added user logic and started other modules work.
