# fleet.management/src/main/java/ro/agilehub/javacourse/car/hire/fleet/controller/FleetController.java
@@ -3,61 +3,37 @@ package ro.agilehub.javacourse.car.hire.fleet.controller;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import ro.agilehub.javacourse.car.hire.api.model.Car;
-import ro.agilehub.javacourse.car.hire.api.model.ResourceCreatedDTO;
-import ro.agilehub.javacourse.car.hire.api.model.ResponseDTO;
+import ro.agilehub.javacourse.car.hire.api.model.*;
 import ro.agilehub.javacourse.car.hire.api.specification.FleetApi;
 
 import javax.validation.Valid;
-import java.util.ArrayList;
 import java.util.List;
 
 @RestController
 public class FleetController implements FleetApi {
 
     @Override
-    public ResponseEntity<ResourceCreatedDTO> addCarToFleet(@Valid Car car) {
-        ResourceCreatedDTO resourceCreatedDTO = new ResourceCreatedDTO();
-        resourceCreatedDTO.setId(1L);
-        return ResponseEntity.ok(resourceCreatedDTO);
+    public ResponseEntity<ResourceCreatedDTO> addCarToFleet(@Valid NewCarDTO newCarDTO) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<ResponseDTO> deleteCar(Integer id) {
-        ResponseDTO responseDTO = new ResponseDTO();
-        responseDTO.setMessage("Delete operations has been done for car " + id);
-        return ResponseEntity.ok(responseDTO);
+    public ResponseEntity<ResponseDTO> deleteCar(String id) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<List<Car>> getAllCarsFromFleet(@Valid String status) {
-        List<Car> cars = new ArrayList<>();
-        cars.add(mockCar());
-        return ResponseEntity.ok(cars);
+    public ResponseEntity<List<CarDTO>> getAllCarsFromFleet(@Valid String status) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<Car> getCarByID(Integer id) {
-        return ResponseEntity.ok(mockCar());
+    public ResponseEntity<CarDTO> getCarByID(String id) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<ResponseDTO> updateCarDetails(Integer id, @Valid Car car) {
-        ResponseDTO responseDTO = new ResponseDTO();
-        responseDTO.setMessage("Car has been updated successfully");
-        return ResponseEntity.ok(responseDTO);
-    }
-
-    private Car mockCar() {
-        Car car = new Car();
-        car.setCarClass("Sedan");
-        car.setFuel(100f);
-        car.setId(1L);
-        car.setYear(2020);
-        car.setMake("BMW");
-        car.setMileage(1000L);
-        car.setModel("3 series");
-        car.setStatus("ACTIVE");
-        return car;
+    public ResponseEntity<ResponseDTO> updateCarDetails(String id, @Valid List<PatchDocument> patchDocument) {
+        return null;
     }
 }
